--- a/Backend/UNUS/src/main/resources/application.properties
+++ b/Backend/UNUS/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port = 8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=CST&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+
+logging.file.name=application.log
+logging.level.org.springFramework=DEBUG
 
