--- a/Backend/UNUS/src/main/resources/application.properties
+++ b/Backend/UNUS/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=CST&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=UNUSpassword22
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
