--- a/Backend/UNUS/src/main/resources/application.properties
+++ b/Backend/UNUS/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 server.port = 8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=CST&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=UNUSpassword22
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-
-logging.file.name=application.log
-logging.level.org.springFramework=DEBUG
 
