--- a/Backend/UNUS/pom.xml
+++ b/Backend/UNUS/pom.xml
@@ -28,14 +28,13 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- The H2 database dependency -->
+		<!-- The H2 database dependency
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.200</version>
 			<scope>runtime</scope>
-		</dependency>
-
+		</dependency> -->
 
 		<!-- MYSQL dependencies -->
 		<dependency>
