--- a/Backend/UNUS/src/main/resources/application.properties
+++ b/Backend/UNUS/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port = 8080
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&useLegacyDatetimeCode=false
-#spring.datasource.url=jdbc:mysql://coms-309-029.class.las.iastate.edu:3306/mydb?useSSL=false&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://coms-309-029.class.las.iastate.edu:3306/mydb?useSSL=false&useLegacyDatetimeCode=false
 spring.datasource.username=root
-#spring.datasource.password=83c45fa4fc4683ab
-spring.datasource.password=UNUSpassword22
+spring.datasource.password=83c45fa4fc4683ab
+#spring.datasource.password=UNUSpassword22
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
