Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ android-build: #this is another job
    - android_tag         					#this is LINK to the docker runner on the remote-server        
   before_script:
     - export GRADLE_USER_HOME=`pwd`/.gradle
-    - chmod +x ./Frontend/gradlew			#change directory to where you have ‘gradlew’ in your android directory
+    - chmod +x ./Frontend/Unus/gradlew			#change directory to where you have ‘gradlew’ in your android directory
   script:
     - cd Frontend					#change directory to where you have your android application
-    - ./gradlew assemble
+    - ./Unus/gradlew assemble
