--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 # Example  .gitlab-ci.yml file
 stages:
-  - mavenDeploy
+  - maventry
   - androidtry
 
 maven-build:   #this is a JOB
-  stage: mavenDeploy
+  stage: maventry
   tags:
     - springboot_tag  					# this is LINK to the shell runner on the remote-server 
   script:
