trying to get websockets working for game lobbies

--- a/Backend/UNUS/pom.xml
+++ b/Backend/UNUS/pom.xml
@@ -28,6 +28,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+
 		<!-- The H2 database dependency
 		<dependency>
 			<groupId>com.h2database</groupId>
