got websockets working somewhat but still getting errors

--- a/Backend/UNUS/pom.xml
+++ b/Backend/UNUS/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<!-- The H2 database dependency
 		<dependency>
