--- a/Frontend/Unus/app/build.gradle
+++ b/Frontend/Unus/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.volley:volley:1.2.1'
-
+    implementation 'org.java-websocket:Java-WebSocket:1.3.8'
 
 }
