--- a/Backend/UNUS/pom.xml
+++ b/Backend/UNUS/pom.xml
@@ -66,8 +66,14 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
