--- a/Backend/UNUS/src/main/resources/application.properties
+++ b/Backend/UNUS/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.show_sql=true
 logging.file.name=application.log
 logging.level.org.springFramework=DEBUG
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
