Fixed android-test run conditions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ android-build:
 android_test:
   only:
     changes:
-      - Backend/**/*
+      - Frontend/**/*
   image: gjandres/android-ci:latest
   stage: androidtest
   tags:
